--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <title>Velaro-Tix — Практики ИИ для каждого</title>
     <meta name="description" content="Инновационная технология внедрения ИИ в повседневную жизнь. Платформа года для обучения и роста.">
 
-    <link rel="icon" type="image/svg+xml" href="img/favicon.svg">
+  <link rel="icon" type="image/svg+xml"
+    href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' fill='%231A1A1A'/%3E%3Cpath d='M16 6 L18.5 13.5 L26 16 L18.5 18.5 L16 26 L13.5 18.5 L6 16 L13.5 13.5 Z' fill='%23F4F1EA'/%3E%3C/svg%3E">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
